docs(readme): add GitHub Releases section and stack summary
Co-authored-by: Cursor <cursoragent@cursor.com>